# opengl-template

./: CMakeLists.txt
cmake/: CompilerWarnings.cmake
src/: CMakeLists.txt  main.cpp
